refactor flow
