# cmd/server/wire_gen.go
@@ -38,9 +38,10 @@ func wireApp(data *conf.Data, confTransport *conf.Transport, logger *slog.Logger
 	encoder := protobuf.NewEncoder()
 	eventPublisher := mysql.NewEventPublisher(db, encoder)
 	imageCreatedHandler := domainevent.NewImageCreatedHandler(eventPublisher)
-	imageUpdatedHandler := domainevent.NewImageUpdatedHandler(eventPublisher)
+	imageUploadedHandler := domainevent.NewImageUploadedHandler(eventPublisher)
+	imageProcessedHandler := domainevent.NewImageProcessedHandler(eventPublisher)
 	imageDeletedHandler := domainevent.NewImageDeletedHandler(eventPublisher)
-	dispatcher := domainevent.NewDispatcher(imageCreatedHandler, imageUpdatedHandler, imageDeletedHandler)
+	dispatcher := domainevent.NewDispatcher(imageCreatedHandler, imageUploadedHandler, imageProcessedHandler, imageDeletedHandler)
 	image := mysql.NewImageRepo(db, dispatcher)
 	objectKeyPolicy := service.NewObjectKeyPolicy(image)
 	unitOfWork := mysql.NewUnitOfWork(db)
@@ -51,14 +52,14 @@ func wireApp(data *conf.Data, confTransport *conf.Transport, logger *slog.Logger
 	storage := s3.NewStorage(client, data)
 	sourceObjectKeyGenerator := s3.NewSourceObjectKeyGenerator()
 	createImageHandler := command.NewCreateImageHandler(image, objectKeyPolicy, unitOfWork, storage, sourceObjectKeyGenerator)
+	presignImageHandler := command.NewPresignImageHandler(image, unitOfWork, storage)
 	confirmImageUploadHandler := command.NewConfirmImageUploadHandler(image, unitOfWork, storage)
 	imageProcessor := processing.NewImageProcessor()
 	processImageHandler := command.NewProcessImageHandler(image, unitOfWork, storage, imageProcessor)
 	deleteImageHandler := command.NewDeleteImageHandler(image, unitOfWork)
-	bus := command.NewBus(createImageHandler, confirmImageUploadHandler, processImageHandler, deleteImageHandler)
+	bus := command.NewBus(createImageHandler, presignImageHandler, confirmImageUploadHandler, processImageHandler, deleteImageHandler)
 	getImageHandler := query.NewGetImageHandler(image)
-	presignImageHandler := query.NewPresignImageHandler(image, storage)
-	queryBus := query.NewBus(getImageHandler, presignImageHandler)
+	queryBus := query.NewBus(getImageHandler)
 	apiService := api.NewService(bus, queryBus)
 	tracing := middleware.NewTracing()
 	metrics, err := middleware.NewMetrics()
